--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -242,8 +242,12 @@ frontend:
     timeout: 2m
   # The maximum message size in megabytes the client can receive.
   grpcMaxRecvMsgSize: 4
+  # The enableRevisions option is EXPERIMENTAL and may be removed or changed without a breaking change.
+  # When enabled, the /release endpoint to accept a revision (i.e. 1.0.0, 1.1.3...). Releases are ordered
+  # by revision and not by version number.
+  enableRevisions: true
 rollout:
-  enabled: false
+  enabled: true
   service:
     annotations: {}
   pod:
