fix: remove earthly from frontend-service
Notable difference in the frontend-service Dockerfile:
We run "go build" in the dockerfile,
not outside docker and just in `make`.

Ref: SRX-2B09UL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,7 @@ services:
       postgres:
         condition: service_healthy
   frontend-service:
-    image: europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/kuberpult-frontend-service:local
+    image: europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/kuberpult-frontend-service:latest
     # Note: this `container_name` needs to be the same as in `package.json`
     container_name: kuberpult-frontend-service
     environment:
