--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -14,7 +14,6 @@
 
 # Copyright freiheit.com
 
-# NOTE: this will be replaced with the etf-golang makefile
 ROOT_DIR=..
 MAKEFLAGS += --no-builtin-rules
 GO := go
@@ -24,6 +23,8 @@ MIN_COVERAGE?=47
 
 SERVICE_DIR:=/kp/pkg
 include $(ROOT_DIR)/infrastructure/make/go/include.mk
+
+PKG_WITHOUT_DOCKER=
 
 all: gen lint test
 test: gen unit-test
@@ -37,7 +38,14 @@ gen: grpc-api-gen publicapi
 grpc-api-gen: api/v1/api.EnvironmentConfig_grpc.pb.go
 api/v1/api.EnvironmentConfig_grpc.pb.go api/v1/api.pb.go api/v1/api.pb.gw.go api/v1/api_grpc.pb.go: api/v1/api.proto buf.yaml buf.gen.yaml buf.lock deps
 	if grep -q '^import "google/api/annotations.proto"' $< || grep -q '^import "google/api/http.proto"' $< ; then echo 'Instead of using google.api.http protobuf annotations we write HTTP handlers by hand' ; exit 1 ; fi
+
+ifeq ($(PKG_WITHOUT_DOCKER),)
+	@echo "Running without docker"
+	buf generate
+else
+	@echo "Running in docker"
 	docker run -w /kp/pkg --rm -v "./api/v1:/kp/pkg/api/v1" $(DEPS_IMAGE) sh -c "buf generate"
+endif
 
 publicapi: publicapi/$(GO_SERVER_GEN)
 publicapi/$(GO_SERVER_GEN): publicapi/api.yaml
