--- a/services/manifest-repo-export-service/Dockerfile
+++ b/services/manifest-repo-export-service/Dockerfile
@@ -3,7 +3,6 @@ FROM ${BUILDER_IMAGE} as builder
 FROM alpine:3.21
 ENV TZ=Europe/Berlin
 RUN adduser --disabled-password --home "/kp" --uid 1000 kp
-RUN chown -R kp:kp /kp
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
 COPY --from=builder /kp/database/migrations /migrations
@@ -14,7 +13,16 @@ RUN /tmp/install-libgit2.sh && rm /tmp/install-libgit2.sh
 
 COPY cmd/server/lib/ /lib
 COPY cmd/server/usr/ /usr
+# --- FIX IS HERE ---
+# 1. Explicitly create the directory that the application needs to write to.
+#    The -p flag ensures parent directories are also created if they don't exist.
+RUN mkdir -p /kp/kuberpult/repository_remote/
 
+# 2. Change ownership of the user's entire home directory and all its contents.
+#    This is done just before switching to the non-root user to ensure all
+#    previously created files and directories have the correct owner.
+RUN chown -R kp:kp /kp
+# --- END OF FIX ---
 USER kp
 WORKDIR /kp
 COPY ./cmd/server/bin/main /main
