--- a/services/frontend-service/package.json
+++ b/services/frontend-service/package.json
@@ -22,7 +22,7 @@
     "@peculiar/webcrypto": "1.4.5",
     "@types/react-beforeunload": "2.1.5",
     "classnames": "2.5.1",
-    "jwt-decode": "4.0.0", 
+    "jwt-decode": "4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.25.0",
@@ -30,7 +30,8 @@
     "react-spinners": "0.13.8",
     "react-tooltip": "5.26.0",
     "react-use-sub": "4.0.1",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "semver": "^7.7.2"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
@@ -53,6 +54,7 @@
     "@types/node": "20.11.10",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/semver": "^7.7.0",
     "@typescript-eslint/parser": "7.18.0",
     "browser-headers": "0.4.1",
     "eslint": "8.56.0",
