--- a/.github/workflows/execution-plan-snippet-earthly.yml
+++ b/.github/workflows/execution-plan-snippet-earthly.yml
@@ -28,7 +28,102 @@ jobs:
         run: |
           gcloud auth configure-docker europe-docker.pkg.dev
       - run: mkdir -p artifacts/
-      - name: Hardcode the converted plan
+      - name: Set version pr
+        if: inputs.trigger == 'pull-request'
+        run: |
+          echo '{
+            "stage_a": {
+              "steps": [
+                {
+                  "image": "docker:git",
+                  "command": "make -C infrastructure/docker/builder build-pr DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "artifacts": "",
+                  "artifactName": "Artifact_infrastructure_docker_builder",
+                  "directory": "infrastructure/docker/builder",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "docker:git",
+                  "command": "make -C infrastructure/docker/git-ssh build-pr DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=f28252ef84049ebb31c8cdf6f040a576da1b0bfd22ffe22ba2c6aaba0f8330a6",
+                  "artifacts": "",
+                  "artifactName": "Artifact_infrastructure_docker_git-ssh",
+                  "directory": "infrastructure/docker/git-ssh",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                }
+              ]
+            },
+            "stage_b": {
+              "steps": [
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/manifest-repo-export-service build-pr",
+                  "artifacts": "services/manifest-repo-export-service/coverage.html",
+                  "artifactName": "Artifact_services_manifest-repo-export-service",
+                  "directory": "services/manifest-repo-export-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/rollout-service build-pr",
+                  "artifacts": "services/rollout-service/coverage.html",
+                  "artifactName": "Artifact_services_rollout-service",
+                  "directory": "services/rollout-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C cli build-pr",
+                  "artifacts": "cli/coverage.html",
+                  "artifactName": "Artifact_cli",
+                  "directory": "cli",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C pkg build-pr",
+                  "artifacts": "pkg/coverage.html",
+                  "artifactName": "Artifact_pkg",
+                  "directory": "pkg",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/cd-service build-pr",
+                  "artifacts": "services/cd-service/coverage.html",
+                  "artifactName": "Artifact_services_cd-service",
+                  "directory": "services/cd-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/reposerver-service build-pr",
+                  "artifacts": "services/reposerver-service/coverage.html",
+                  "artifactName": "Artifact_services_reposerver-service",
+                  "directory": "services/reposerver-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/frontend-service build-pr",
+                  "artifacts": "services/frontend-service/coverage.html",
+                  "artifactName": "Artifact_services_frontend-service",
+                  "directory": "services/frontend-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                }
+              ]
+            }
+          }' > artifacts/github-convertor.json
+      - name: Set version main
+        if: inputs.trigger == 'main'
         run: |
           echo '{
             "stage_a": {
