--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,12 @@ database/db.sqlite
 .pnpm-store
 build/
 .tmp-earthly-out
-services/**/coverage.html
-services/**/coverage.out
+services/**/coverage*.html
+services/**/coverage*.out
 pkg/coverage.html
+pkg/coverage.out
 cli/coverage.html
+cli/coverage.out
 
 # used by envrc https://direnv.net/
 .envrc
