--- a/services/frontend-service/Dockerfile
+++ b/services/frontend-service/Dockerfile
@@ -29,7 +29,7 @@ WORKDIR /kp/
 ADD Makefile.variables .
 ADD Makefile .
 #RUN cat pkg/Makefile
-RUN make -C pkg grpc-api-gen SKIP_DEPS=1
+RUN make -C pkg grpc-api-gen SKIP_DEPS=1 PKG_WITHOUT_DOCKER=1
 RUN GOARCH=amd64 GOOS=linux CGO_ENABLED=0 go build -o /kp/main /kp/services/frontend-service/cmd/server/main.go
 
 # Build js:
