--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -14,7 +14,6 @@
 
 # Copyright freiheit.com
 
-# NOTE: this will be replaced with the etf-golang makefile
 ROOT_DIR=..
 MAKEFLAGS += --no-builtin-rules
 GO := go
@@ -26,23 +25,43 @@ MAIN_PATH=
 SERVICE_DIR:=/kp/pkg
 include $(ROOT_DIR)/infrastructure/make/go/include.mk
 
+PKG_WITHOUT_DOCKER?=0
+
 all: gen lint test
 test: gen unit-test
 
 .PHONY: lint
 lint: gen
+ifeq ($(PKG_WITHOUT_DOCKER),1)
+	@echo "Running without docker"
+	golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./... || $(SKIP_LINT_ERRORS) && exhaustruct -test=false $$(go list ./... | grep -v "github.com/freiheit-com/kuberpult/pkg/api" | grep -v "github.com/freiheit-com/kuberpult/pkg/publicapi")
+else
+	@echo "Running in docker"
 	docker run --rm -w $(SERVICE_DIR) -v ".:$(SERVICE_DIR)" $(DEPS_IMAGE) sh -c 'golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./... || $(SKIP_LINT_ERRORS) && exhaustruct -test=false $$(go list ./... | grep -v "github.com/freiheit-com/kuberpult/pkg/api" | grep -v "github.com/freiheit-com/kuberpult/pkg/publicapi")'
+endif
 
 gen: grpc-api-gen publicapi
 
 grpc-api-gen: api/v1/api.EnvironmentConfig_grpc.pb.go
 api/v1/api.EnvironmentConfig_grpc.pb.go api/v1/api.pb.go api/v1/api.pb.gw.go api/v1/api_grpc.pb.go: api/v1/api.proto buf.yaml buf.gen.yaml buf.lock deps
 	if grep -q '^import "google/api/annotations.proto"' $< || grep -q '^import "google/api/http.proto"' $< ; then echo 'Instead of using google.api.http protobuf annotations we write HTTP handlers by hand' ; exit 1 ; fi
+ifeq ($(PKG_WITHOUT_DOCKER),1)
+	@echo "Running without docker"
+	buf generate
+else
+	@echo "Running in docker"
 	docker run -w /kp/pkg --rm -v "./api/v1:/kp/pkg/api/v1" $(DEPS_IMAGE) sh -c "buf generate"
+endif
 
 publicapi: publicapi/$(GO_SERVER_GEN)
 publicapi/$(GO_SERVER_GEN): publicapi/api.yaml
+ifeq ($(PKG_WITHOUT_DOCKER),1)
+	@echo "Running without docker"
+	buf generate && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml
+else
+	@echo "Running in docker"
 	docker run -w /kp/pkg --rm -v "./publicapi:/kp/pkg/publicapi" $(DEPS_IMAGE) sh -c 'buf generate && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml'
+endif
 
 release: #no-op
 clean:
