--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -245,7 +245,7 @@ frontend:
   # The enableRevisions option is EXPERIMENTAL and may be removed or changed without a breaking change.
   # When enabled, the /release endpoint to accept a revision (i.e. 1.0.0, 1.1.3...). Releases are ordered
   # by revision and not by version number.
-  enableRevisions: true
+  enableRevisions: false
 rollout:
   enabled: false
   service:
