configure linters explicitely and run linters in tests

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,13 @@
 version: "2"
 linters:
-  default: all
+  enable:
+    - copyloopvar
+    - errcheck
+    - govet
+    - ineffassign
+    - staticheck
+    - unused
+    - asciicheck
+    - bodyclose
+  disable:
+
