dc: with datadog

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+  datadog-agent:
+    image: datadog/agent:7
+    env_file:
+      - docker.env
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /proc/:/host/proc/:ro
+      - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
+    ports:
+      - 127.0.0.1:8126:8126/tcp
+    environment:
+      - DD_APM_ENABLED=true
+      - DD_APM_NON_LOCAL_TRAFFIC=true
+      - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
+      - DD_AC_EXCLUDE=name:datadog-agent
+    stop_grace_period: 2.0s
   postgres:
     image: postgres:13.15
     restart: unless-stopped
@@ -57,6 +73,12 @@ services:
       - KUBERPULT_VERSION=v0.1.2
       - KUBERPULT_CHECK_CUSTOM_MIGRATIONS=false
       - KUBERPULT_REPOSERVER_ENABLED=false
+      - KUBERPULT_ENABLE_METRICS=true
+      - DD_AGENT_HOST=datadog-agent
+      - KUBERPULT_ENABLE_TRACING=true
+      - DD_SERVICE=kuberpult-cd-service
+      - DD_VERSION=0.0.0
+      - DD_ENV=example-local-jul11-b
     ports:
       - "8080:8080"
       - "8443:8443"
@@ -65,6 +87,8 @@ services:
     stop_grace_period: 0.5s
     depends_on:
       manifest-repo-export-service:
+        condition: service_healthy
+      datadog-agent:
         condition: service_healthy
       postgres:
         condition: service_healthy
@@ -84,7 +108,7 @@ services:
       - KUBERPULT_GIT_BRANCH=master
       - KUBERPULT_GIT_SSH_KEY=/etc/ssh/identity
       - KUBERPULT_GIT_SSH_KNOWN_HOSTS=/etc/ssh/ssh_known_hosts
-      - KUBERPULT_ENABLE_METRICS=false
+      - KUBERPULT_ENABLE_METRICS=true
       - KUBERPULT_DOGSTATSD_ADDR=127.0.0.1:8125
       - KUBERPULT_ARGO_CD_GENERATE_FILES=true
       - KUBERPULT_RELEASE_VERSIONS_LIMIT=20
@@ -96,6 +120,11 @@ services:
       - KUBERPULT_VERSION=v0.1.2
       - KUBERPULT_CHECK_CUSTOM_MIGRATIONS=false
       - KUBERPULT_GIT_TIMESTAMP_MIGRATIONS_ENABLED=false
+      - KUBERPULT_ENABLE_TRACING=true
+      - DD_SERVICE=kuberpult-manifest-repo-export-service
+      - DD_ENV=example-local-jul11-b
+      - DD_AGENT_HOST=datadog-agent
+      - KUBERPULT_ESL_PROCESSING_BACKOFF=15
     volumes:
       - ./services/cd-service:/kp/kuberpult
     ports:
@@ -108,6 +137,8 @@ services:
       timeout: 5s
       retries: 50
     depends_on:
+      datadog-agent:
+        condition: service_healthy
       postgres:
         condition: service_healthy
   frontend-service:
@@ -132,6 +163,11 @@ services:
       - KUBERPULT_BATCH_CLIENT_TIMEOUT=2m
       - KUBERPULT_DEX_RBAC_POLICY_PATH=/etc/policy.csv
       - KUBERPULT_GRPC_MAX_RECV_MSG_SIZE=8
+      - KUBERPULT_ENABLE_TRACING=true
+      - KUBERPULT_ENABLE_METRICS=true
+      - DD_SERVICE=kuberpult-frontend-service
+      - DD_ENV=example-local-jul11-b
+      - DD_AGENT_HOST=datadog-agent
     ports:
       - "8081:8081"
       - "5555:5555"
