feat(cd-service): Add revision to /release endpoint (#2493)
Ref: SRX-NAIP6Q

---------

Co-authored-by: Sven Urbanski <sven.urbanski@freiheit.com>

--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -242,6 +242,9 @@ frontend:
     timeout: 2m
   # The maximum message size in megabytes the client can receive.
   grpcMaxRecvMsgSize: 4
+  # The enableRevisions option is EXPERIMENTAL and may be removed or changed without a breaking change.
+  # When enabled, the /release endpoint to accept a revision (i.e. 1.0, 1.1, 2.0...), instead of only integers (1,2,3...).
+  enableRevisions: false
 rollout:
   enabled: false
   service:
