--- a/.github/workflows/execution-plan-snippet.yml
+++ b/.github/workflows/execution-plan-snippet.yml
@@ -19,26 +19,202 @@ jobs:
         name: "Authenticate to Google Cloud"
         with:
           credentials_json: ${{ secrets.FDC_DEV_ENV_CI_IMAGE_READER }}
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v2'
+        with:
+          version: '>= 363.0.0'
       - name: gcloud authorize
         run: |
-          gcloud auth configure-docker
+          gcloud auth configure-docker europe-docker.pkg.dev
       - run: mkdir -p artifacts/
-      - name: Plan execution pull request
+      - name: Set version pr
         if: inputs.trigger == 'pull-request'
         run: |
-          ./infrastructure/scripts/execution-plan/plan-pr.sh ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} > artifacts/execution-plan.json
-      - name: Plan execution main
-        if: inputs.trigger == 'main' || inputs.trigger == 'tag'
+          echo '{
+            "stage_a": {
+              "steps": [
+                {
+                  "image": "docker:git",
+                  "command": "make -C infrastructure/docker/builder build-pr DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "artifacts": "",
+                  "artifactName": "Artifact_infrastructure_docker_builder",
+                  "directory": "infrastructure/docker/builder",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "docker:git",
+                  "command": "make -C infrastructure/docker/git-ssh build-pr DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=f28252ef84049ebb31c8cdf6f040a576da1b0bfd22ffe22ba2c6aaba0f8330a6",
+                  "artifacts": "",
+                  "artifactName": "Artifact_infrastructure_docker_git-ssh",
+                  "directory": "infrastructure/docker/git-ssh",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                }
+              ]
+            },
+            "stage_b": {
+              "steps": [
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/manifest-repo-export-service build-pr",
+                  "artifacts": "services/manifest-repo-export-service/coverage.html",
+                  "artifactName": "Artifact_services_manifest-repo-export-service",
+                  "directory": "services/manifest-repo-export-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/rollout-service build-pr",
+                  "artifacts": "services/rollout-service/coverage.html",
+                  "artifactName": "Artifact_services_rollout-service",
+                  "directory": "services/rollout-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C cli build-pr",
+                  "artifacts": "cli/coverage.html",
+                  "artifactName": "Artifact_cli",
+                  "directory": "cli",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C pkg build-pr",
+                  "artifacts": "pkg/coverage.html",
+                  "artifactName": "Artifact_pkg",
+                  "directory": "pkg",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/cd-service build-pr",
+                  "artifacts": "services/cd-service/coverage.html",
+                  "artifactName": "Artifact_services_cd-service",
+                  "directory": "services/cd-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/reposerver-service build-pr",
+                  "artifacts": "services/reposerver-service/coverage.html",
+                  "artifactName": "Artifact_services_reposerver-service",
+                  "directory": "services/reposerver-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/frontend-service build-pr",
+                  "artifacts": "services/frontend-service/coverage.html",
+                  "artifactName": "Artifact_services_frontend-service",
+                  "directory": "services/frontend-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                }
+              ]
+            }
+          }' > artifacts/github-convertor.json
+      - name: Set version main
+        if: inputs.trigger == 'main'
         run: |
-          ./infrastructure/scripts/execution-plan/plan-main.sh > artifacts/execution-plan.json
-      - name: Print execution plan
-        run: |
-          cat artifacts/execution-plan.json
-      - name: Convert plan to github specific format
-        run: |
-          GITHUB_CONVERTOR_IMAGE="GITHUB_CONVERTOR_IMAGE="europe-docker.pkg.dev/fdc-standard-setup-dev-env/all-artifacts/tools/execplan-convertor-github:kuberpult""
-          DEFAULT_IMAGE="docker:git"
-          cat artifacts/execution-plan.json | docker run -i "${GITHUB_CONVERTOR_IMAGE}" "${DEFAULT_IMAGE}" > artifacts/github-convertor.json
+          echo '{
+            "stage_a": {
+              "steps": [
+                {
+                  "image": "docker:git",
+                  "command": "make -C infrastructure/docker/builder build-main DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "artifacts": "",
+                  "artifactName": "Artifact_infrastructure_docker_builder",
+                  "directory": "infrastructure/docker/builder",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "docker:git",
+                  "command": "make -C infrastructure/docker/git-ssh build-main DOCKER_REGISTRY_URI=europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult IMAGE_TAG=f28252ef84049ebb31c8cdf6f040a576da1b0bfd22ffe22ba2c6aaba0f8330a6",
+                  "artifacts": "",
+                  "artifactName": "Artifact_infrastructure_docker_git-ssh",
+                  "directory": "infrastructure/docker/git-ssh",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                }
+              ]
+            },
+            "stage_b": {
+              "steps": [
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/manifest-repo-export-service build-main",
+                  "artifacts": "services/manifest-repo-export-service/coverage.html",
+                  "artifactName": "Artifact_services_manifest-repo-export-service",
+                  "directory": "services/manifest-repo-export-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/rollout-service build-main",
+                  "artifacts": "services/rollout-service/coverage.html",
+                  "artifactName": "Artifact_services_rollout-service",
+                  "directory": "services/rollout-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C cli build-main",
+                  "artifacts": "cli/coverage.html",
+                  "artifactName": "Artifact_cli",
+                  "directory": "cli",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C pkg build-main",
+                  "artifacts": "pkg/coverage.html",
+                  "artifactName": "Artifact_pkg",
+                  "directory": "pkg",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/cd-service build-main",
+                  "artifacts": "services/cd-service/coverage.html",
+                  "artifactName": "Artifact_services_cd-service",
+                  "directory": "services/cd-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/reposerver-service build-main",
+                  "artifacts": "services/reposerver-service/coverage.html",
+                  "artifactName": "Artifact_services_reposerver-service",
+                  "directory": "services/reposerver-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                },
+                {
+                  "image": "europe-west3-docker.pkg.dev/fdc-public-docker-registry/kuberpult/infrastructure/docker/builder:e681d01d89f67378f8d57613ee515b31682658d75c762c242f386e516b66deb8",
+                  "command": "make -C services/frontend-service build-main",
+                  "artifacts": "services/frontend-service/coverage.html",
+                  "artifactName": "Artifact_services_frontend-service",
+                  "directory": "services/frontend-service",
+                  "cachefiles": "",
+                  "cacheKey": ""
+                }
+              ]
+            }
+          }' > artifacts/github-convertor.json
       - name: Print github converted plan
         run: |
           cat artifacts/github-convertor.json
@@ -47,13 +223,22 @@ jobs:
         run: |
           echo "stage_a=$(cat artifacts/github-convertor.json | jq '.stage_a.steps' -c)" >> $GITHUB_OUTPUT
           echo "stage_b=$(cat artifacts/github-convertor.json | jq '.stage_b.steps' -c)" >> $GITHUB_OUTPUT
+          echo "stage_a=$(cat artifacts/github-convertor.json | jq '.stage_a.steps' -c)" > artifacts/stage.a.tmp.json
+          echo "stage_b=$(cat artifacts/github-convertor.json | jq '.stage_b.steps' -c)" > artifacts/stage.b.tmp.json
       - uses: actions/upload-artifact@v4
         name: Upload execution plan
         with:
-          name: execution-plan.json
+          name: execution-plan.zip
           path: |
+            artifacts/stage.a.tmp.json
+            artifacts/stage.b.tmp.json
             artifacts/execution-plan.json
             artifacts/github-convertor.json
+      - name: Split up plan into individual parts
+        id: testingabc
+        run: |
+          echo "A: ${{ steps.splitplan.outputs.stage_a }} "
+          echo "B: ${{ steps.splitplan.outputs.stage_b }} "
     outputs:
       stage_a: ${{ steps.splitplan.outputs.stage_a }}
       stage_b: ${{ steps.splitplan.outputs.stage_b }}
@@ -65,7 +250,9 @@ jobs:
         data: ${{fromJSON(needs.execution_plan.outputs.stage_a)}}
     name: ${{ matrix.data.directory }} - Build and Publish
     runs-on: ubuntu-latest
+    # we want to publish to the ghcr.io registry. For this we need to have package:write rights
     permissions:
+      packages: write
       contents: read
     steps:
       - name: Checkout repository
@@ -115,6 +302,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: matrix.data.artifacts != ''
         with:
+          if-no-files-found: error
           name: ${{ matrix.data.artifactName }}
           path: |
             ${{ matrix.data.artifacts }}
@@ -124,15 +312,17 @@ jobs:
     if: |
       always() &&
       (needs.stageA_build.result != 'failed')  &&
+      (needs.stageA_build.result != 'cancelled')  &&
       (needs.execution_plan.outputs.stage_b != 'null')
     strategy:
+      fail-fast: false
       matrix:
         data: ${{fromJSON(needs.execution_plan.outputs.stage_b)}}
     name: ${{ matrix.data.directory }} - Build and Publish
     runs-on: ubuntu-latest
-    container:
-      image: ${{ matrix.data.image }}
+    # we want to publish to the ghcr.io registry. For this we need to have package:write rights
     permissions:
+      packages: write
       contents: read
     steps:
       - name: Checkout repository
@@ -185,26 +375,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: matrix.data.artifacts != ''
         with:
+          if-no-files-found: error
           name: ${{ matrix.data.artifactName }}
           path: |
             ${{ matrix.data.artifacts }}
-  cleanup:
-    needs: [stageB_build, execution_plan]
-    name: Cleanup
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Set version pr/main
-        if: inputs.trigger == 'pull-request' || inputs.trigger == 'main'
-        run: |
-          git config --global --add safe.directory "$GITHUB_WORKSPACE"
-          echo "VERSION=$(make version)" >> $GITHUB_ENV
-      - name: Set version tag
-        if: inputs.trigger == 'tag'
-        run: |
-          echo "VERSION=${GITHUB_REF#refs/tags/}"  >> $GITHUB_ENV
-      - name: Cleanup
-        run: make cleanup-pr
