--- a/Makefile.variables
+++ b/Makefile.variables
@@ -22,6 +22,7 @@ SERVICE_IMAGES:=kuberpult-cd-service kuberpult-rollout-service kuberpult-fronten
 IMAGE_TAG?=latest
 BUILDER_IMAGE?=$(DOCKER_REGISTRY_URI)/infrastructure/docker/builder:latest
 DEPS_IMAGE?=$(DOCKER_REGISTRY_URI)/infrastructure/docker/deps:latest
+DEPS_MAIN_IMAGE=$(DOCKER_REGISTRY_URI)/infrastructure/docker/deps:main
 CLI_IMAGE:=kuberpult-client
 GO_TEST_ARGS ?=
 export GO_TEST_ARGS
