--- a/infrastructure/docker/deps/Makefile
+++ b/infrastructure/docker/deps/Makefile
@@ -20,3 +20,5 @@ include ../../../Makefile.variables
 build:
 	make -C ../../.. builder
 	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(BUILDER_IMAGE)
+	docker tag -t $(DEPS_IMAGE) $(DEPS_MAIN_IMAGE)
+	docker push $(DEPS_MAIN_IMAGE)
