fix: always tag images as "main" after the main build (#2514)
Ref: SRX-3FH1FA

--- a/infrastructure/docker/deps/Makefile
+++ b/infrastructure/docker/deps/Makefile
@@ -20,3 +20,7 @@ include ../../../Makefile.variables
 build:
 	make -C ../../.. builder
 	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(BUILDER_IMAGE)
+	docker tag $(DEPS_IMAGE) $(DEPS_MAIN_IMAGE)
+
+build-main:
+	docker push $(DEPS_MAIN_IMAGE)
