--- a/.github/workflows/execution-plan-snippet.yml
+++ b/.github/workflows/execution-plan-snippet.yml
@@ -102,7 +102,8 @@ jobs:
                 }
               ]
             }
-          }' > artifacts/github-convertor.json
+          }' > artifacts/github-convertor.old.json
+          ./infrastructure/scripts/execution-plan/create-matrix.sh build-pr > artifacts/github-convertor.json
       - name: Set version main
         if: inputs.trigger == 'main'
         run: |
