--- a/infrastructure/docker/deps/Makefile
+++ b/infrastructure/docker/deps/Makefile
@@ -22,5 +22,7 @@ build:
 	docker build -t $(DEPS_IMAGE) -f Dockerfile ../../.. --build-arg BUILDER_IMAGE=$(BUILDER_IMAGE)
 	docker tag $(DEPS_IMAGE) $(DEPS_MAIN_IMAGE)
 
-build-main:
+build-main: build
 	docker push $(DEPS_MAIN_IMAGE)
+
+build-pr: build
