--- a/trivy/Makefile
+++ b/trivy/Makefile
@@ -36,7 +36,7 @@ build-base-image:
 push-base-image:
 	docker push $(TRIVY_IMAGE_URL)
 
-scan-service-pr:
+scan-service-pr: build-base-image
 	echo "KUBERPULT_SERVICE_IMAGE: $(KUBERPULT_SERVICE_IMAGE)"
 	docker run --rm -e TRIVY_USERNAME="" -e GOOGLE_APPLICATION_CREDENTIALS="/root/credentials.json" -v "$(GCP_CREDENTIALS_PATH)":/root/credentials.json:ro $(TRIVY_IMAGE_URL) \
 		trivy --db-repository $(TRIVY_DB_REPO)  --cache-dir /tmp/trivy_cache --severity HIGH,CRITICAL --exit-code 1 image "$(KUBERPULT_SERVICE_IMAGE)"
