skip tag-main-as-pr for anything not under /services/

--- a/infrastructure/docker/builder/Makefile
+++ b/infrastructure/docker/builder/Makefile
@@ -59,3 +59,6 @@ publish: release
 .PHONY: get-builder-image
 get-builder-image:
 	@echo "$(KUBERPULT_BUILDER)"
+
+retag-main:
+	@echo "Skipping retag-main"
