--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -24,6 +24,7 @@ MAIN_PATH=
 
 SERVICE_DIR:=/kp/pkg
 SKIP_TRIVY=1
+SKIP_RETAG_MAIN_AS_PR=1
 include $(ROOT_DIR)/infrastructure/make/go/include.mk
 
 PKG_WITHOUT_DOCKER?=0
