--- a/charts/kuberpult/values.yaml
+++ b/charts/kuberpult/values.yaml
@@ -214,8 +214,9 @@ manifestRepoExport:
       initialDelaySeconds: 5
 
   # The initial time in seconds that this service waits when it does not find esl events to process, before trying again.
-  # Time increases exponentially if errors occur, depending on the type of error.
+  # Time increases exponentially (factor 2.0) if errors occur, depending on the type of error.
   # Maximum time to wait is 600sec (cannot be changed).
+  # Once the maximum time is reached, the service prints an error and exits.
   eslProcessingIdleTimeSeconds: 5
   # Timeout in seconds used for network operations
   networkTimeoutSeconds: 120
