fix(docker): remove deps image
Ref: SRX-PRMZYC

--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -39,7 +39,7 @@ ifeq ($(PKG_WITHOUT_DOCKER),1)
 	golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./... || $(SKIP_LINT_ERRORS) && exhaustruct -test=false $$(go list ./... | grep -v "github.com/freiheit-com/kuberpult/pkg/api" | grep -v "github.com/freiheit-com/kuberpult/pkg/publicapi")
 else
 	@echo "Running in docker"
-	docker run --rm -w $(SERVICE_DIR) -v ".:$(SERVICE_DIR)" $(DEPS_IMAGE) sh -c 'golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./... || $(SKIP_LINT_ERRORS) && exhaustruct -test=false $$(go list ./... | grep -v "github.com/freiheit-com/kuberpult/pkg/api" | grep -v "github.com/freiheit-com/kuberpult/pkg/publicapi")'
+	docker run --rm -w $(SERVICE_DIR) -v ".:$(SERVICE_DIR)" $(BUILDER_IMAGE) sh -c 'golangci-lint run --timeout=15m -j4 --tests=false --skip-files=".*\.pb\.go$$" ./... || $(SKIP_LINT_ERRORS) && exhaustruct -test=false $$(go list ./... | grep -v "github.com/freiheit-com/kuberpult/pkg/api" | grep -v "github.com/freiheit-com/kuberpult/pkg/publicapi")'
 endif
 
 gen: grpc-api-gen publicapi
@@ -52,7 +52,7 @@ ifeq ($(PKG_WITHOUT_DOCKER),1)
 	buf generate
 else
 	@echo "Running in docker"
-	docker run -w /kp/pkg --rm -v "./api/v1:/kp/pkg/api/v1" $(DEPS_IMAGE) sh -c "buf generate"
+	docker run -w /kp/pkg --rm -v "./api/v1:/kp/pkg/api/v1" $(BUILDER_IMAGE) sh -c "buf generate"
 endif
 
 publicapi: publicapi/$(GO_SERVER_GEN)
@@ -62,7 +62,7 @@ ifeq ($(PKG_WITHOUT_DOCKER),1)
 	buf generate && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml
 else
 	@echo "Running in docker"
-	docker run -w /kp/pkg --rm -v "./publicapi:/kp/pkg/publicapi" $(DEPS_IMAGE) sh -c 'buf generate && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml'
+	docker run -w /kp/pkg --rm -v "./publicapi:/kp/pkg/publicapi" $(BUILDER_IMAGE) sh -c 'buf generate && go tool oapi-codegen -generate "std-http-server" -o publicapi/$(GO_SERVER_GEN) -package publicapi publicapi/api.yaml'
 endif
 
 release: #no-op
