--- a/charts/kuberpult/templates/rollout-service.yaml
+++ b/charts/kuberpult/templates/rollout-service.yaml
@@ -118,12 +118,20 @@ spec:
           httpGet:
             path: /healthz
             port: http
-          initialDelaySeconds: 5
-          periodSeconds: 10
+          initialDelaySeconds: {{ .Values.rollout.probes.readiness.initialDelaySeconds }}
+          periodSeconds: {{ .Values.rollout.probes.readiness.periodSeconds }}
+          successThreshold: {{ .Values.rollout.probes.readiness.successThreshold }}
+          timeoutSeconds: {{ .Values.rollout.probes.readiness.timeoutSeconds }}
+          failureThreshold: {{ .Values.rollout.probes.readiness.failureThreshold }}
         livenessProbe:
           httpGet:
             path: /healthz
             port: http
+          initialDelaySeconds: {{ .Values.rollout.probes.liveness.initialDelaySeconds }}
+          periodSeconds: {{ .Values.rollout.probes.liveness.periodSeconds }}
+          successThreshold: {{ .Values.rollout.probes.liveness.successThreshold }}
+          timeoutSeconds: {{ .Values.rollout.probes.liveness.timeoutSeconds }}
+          failureThreshold: {{ .Values.rollout.probes.liveness.failureThreshold }}
         resources:
           limits:
             cpu: "{{ .Values.rollout.resources.limits.cpu }}"
